--- a/src/Components/RowPost/RowPost.css
+++ b/src/Components/RowPost/RowPost.css
@@ -13,8 +13,16 @@
 .poster{
     max-height: 250px;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .posters::-webkit-scrollbar{
     display: none;
+}
+
+.smallPoster{
+    max-height:150px;
+    margin-right: 10px;
+    cursor: pointer;
+
 }
